# src/models/todo.ts
@@ -1,7 +1,7 @@
 export interface Todo {
-    id: number;
-    task: string,
-    who: string,
-    dueDate: string,
-    done: boolean
+    title: string,
+    status: "planned" | "in progress" | "done" | "blocked",
+    responsable: string,
+    dueDate: Date,
+    finnishedDate?: Date,
 }
